VisualTrack, Patetern interface and first pattern lines were created

--- a/Midi-visualizer.vcxproj
+++ b/Midi-visualizer.vcxproj
@@ -299,8 +299,9 @@
     <ClCompile Include="src\Shader\Shader.cpp" />
     <ClCompile Include="src\VAO\Meshes.cpp" />
     <ClCompile Include="src\VAO\VAO.cpp" />
-    <ClCompile Include="src\Visualization\Pattern.cpp" />
+    <ClCompile Include="src\Visualization\Patterns\LinesPattern.cpp" />
     <ClCompile Include="src\Visualization\Visualization.cpp" />
+    <ClCompile Include="src\Visualization\VisualTrack.cpp" />
     <ClCompile Include="src\Window\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -571,8 +572,11 @@
     <ClInclude Include="src\VAO\Meshes.h" />
     <ClInclude Include="src\VAO\VAO.h" />
     <ClInclude Include="src\VAO\Vertex.h" />
-    <ClInclude Include="src\Visualization\Pattern.h" />
+    <ClInclude Include="src\Visualization\Patterns\IPattern.h" />
+    <ClInclude Include="src\Visualization\Patterns\LinesPattern.h" />
+    <ClInclude Include="src\Visualization\Patterns\ListOfPatterns.h" />
     <ClInclude Include="src\Visualization\Visualization.h" />
+    <ClInclude Include="src\Visualization\VisualTrack.h" />
     <ClInclude Include="src\Window\Window.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
