--- a/Midi-visualizer.vcxproj.filters
+++ b/Midi-visualizer.vcxproj.filters
@@ -486,6 +486,9 @@
     <ClCompile Include="src\Visualization\Patterns\LinesPattern.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="src\Visualization\Patterns\SquaresPattern.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="libs\include\MidiFile\Binasc.h">
@@ -1305,6 +1308,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="src\Visualization\Patterns\ListOfPatterns.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Visualization\Patterns\SquaresPattern.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
